--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 @import "header.css";
 
 .hero {
-    background: url('../bg.png') no-repeat center center/cover;
+    background: url('../bg.jpg') no-repeat center center/cover;
     color: #fff;
     text-align: center;
     padding: 100px 20px;
